# powder

./: .gitignore  MANIFEST.in  README.md  pyrightconfig.json  requirements.txt  setup.cfg
django_powder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
powder/: __init__.py
powder/drf/: dispatch.py  io.py
requirements/: requirements-packaging.txt
test_project/powder/drf/: dispatch.py
test_project/test_app/: models.py  viewsets.py
test_project/test_project/: settings.py
tests/: conftest.py  test_dispatcher.py
